--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -1,8 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <solid android:color="#3F51B5" />
-    <stroke
-        android:width="1dp"
-        android:color="#303F9F" />
-</shape> 
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Pressed state -->
+    <item android:state_pressed="true">
+        <shape android:shape="oval">
+            <solid android:color="#303F9F" />
+            <stroke android:width="1dp" android:color="#1A237E" />
+        </shape>
+    </item>
+    
+    <!-- Selected/Activated state -->
+    <item android:state_selected="true">
+        <shape android:shape="oval">
+            <solid android:color="#FF5722" />
+            <stroke android:width="1dp" android:color="#E64A19" />
+        </shape>
+    </item>
+    
+    <!-- Default state -->
+    <item>
+        <shape android:shape="oval">
+            <solid android:color="#3F51B5" />
+            <stroke android:width="1dp" android:color="#303F9F" />
+        </shape>
+    </item>
+</selector> 
