--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,27 @@
             android:textSize="16sp"
             android:layout_marginTop="8dp" />
     </LinearLayout>
+    
+    <!-- Chord Display View - Always visible -->
+    <com.midichords.view.ChordDisplayView
+        android:id="@+id/chordDisplayView"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toBottomOf="@id/midiEventContainer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+    
+    <!-- Staff View - Always visible -->
+    <com.midichords.view.StaffView
+        android:id="@+id/staffView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toBottomOf="@id/chordDisplayView"
+        app:layout_constraintBottom_toTopOf="@id/debugContainer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Controls Container - Initially hidden -->
     <LinearLayout
